# mini-code-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CONTEXT_MANAGEMENT_NOTES.md  ENTRY_POINTS_NOTES.md  INTERACTIVE_MODES_NOTES.md  LITELLM_EXPLAINED.md  PROJECT_DOCUMENTATION.md  RAG_NOTES.md  STUDY_NOTES.md  TOOL_CALLING_NOTES.md
evaluation/: __init__.py  humaneval_problems.py  run_humaneval.py
evaluation/results/: humaneval_llama-3.1-8b-instruct_20260130_161950.json  humaneval_llama-3.1-8b-instruct_20260130_162225.json  humaneval_llama-3.1-8b-instruct_20260130_162430.json
examples/: simple_task.py
src/code_agent/: __init__.py  main.py
src/code_agent/agent/: __init__.py  base.py  interactive.py
src/code_agent/context/: __init__.py  manager.py
src/code_agent/environment/: local.py
src/code_agent/model/: litellm.py
src/code_agent/prompts/: __init__.py  system.py
src/code_agent/rag/: __init__.py  chat.py  ingest.py  retrieve.py
src/code_agent/tools/: __init__.py  builtins.py  registry.py
